--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
+    "express-validator": "^3.2.0",
     "graphql": "^0.10.1",
     "graphql-server-express": "^0.8.0",
     "graphql-tools": "^1.0.0",
